# news-reporter-crew

./: .gitignore  README.md  pyproject.toml
src/latest_news/: app.py  crew.py  database.py  flow.py  main.py
src/latest_news/config/: agents.yaml  tasks.yaml
