[project]
name = "latest_news"
version = "0.1.0"
description = "latest_news using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[openai,tools]>=0.102.0"
]

[project.scripts]
latest_news = "latest_news.main:run"
run_crew = "latest_news.main:run"
train = "latest_news.main:train"
replay = "latest_news.main:replay"
test = "latest_news.main:test"
run_with_trigger = "latest_news.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
